add index-Popular Destinations/Get Inspiration/Subscribe

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav></nav>
+    <nav>
+        <div class="container">
+            <h1></h1>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </nav>
 
     <!-- header -->
     <header></header>
@@ -38,38 +47,38 @@
     </section>
 
     <!-- Popular Destinations -->
-    <section>
+    <section class="mb-lg">
         <div class="container">
             <h2 class="seb-tit mb-xs">Popular Destinations</h2>
             <ul class="d-flex flex-wrap-w">
-                <li class="card col-4 mb-xs">
+                <li class="card col-4 pr-sm mb-xs">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Osaka.jpg" alt="">
                         </div>
-                        <div class="card-txt-wrap d-flex jc-space-between pop-txt">
+                        <div class="card-txt-wrap d-flex jc-space-between ai-center pop-txt">
                             <p class="card-tit d-flex flex-d-col">
                                 <span class="fz-ets fw-bold color-basic-w-light">JAPAN</span>
                                 <span class="fz-sm color-basic-w fw-bold">Osaka</span>
                             </p>
                             <div class="card-dec">
-                                <span class="material-icons">expand_more</span>
+                                <span class="material-icons color-basic-w">expand_more</span>
                             </div>
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 mb-xs">
+                <li class="card col-4 pr-sm mb-xs">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Kyoto.jpg" alt="">
                         </div>
-                        <div class="card-txt-wrap d-flex jc-space-between pop-txt">
+                        <div class="card-txt-wrap d-flex jc-space-between ai-center pop-txt">
                             <p class="card-tit d-flex flex-d-col">
                                 <span class="fz-ets fw-bold color-basic-w-light">JAPAN</span>
                                 <span class="fz-sm color-basic-w fw-bold">Kyoto</span>
                             </p>
                             <div class="card-dec">
-                                <span class="material-icons">expand_more</span>
+                                <span class="material-icons color-basic-w">expand_more</span>
                             </div>
                         </div>
                     </a>
@@ -79,61 +88,61 @@
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Reykjavík.jpg" alt="">
                         </div>
-                        <div class="card-txt-wrap d-flex jc-space-between pop-txt">
+                        <div class="card-txt-wrap d-flex jc-space-between ai-center pop-txt">
                             <p class="card-tit d-flex flex-d-col">
                                 <span class="fz-ets fw-bold color-basic-w-light">Iceland</span>
                                 <span class="fz-sm color-basic-w fw-bold">Reykjavík</span>
                             </p>
                             <div class="card-dec">
-                                <span class="material-icons">expand_more</span>
+                                <span class="material-icons color-basic-w">expand_more</span>
                             </div>
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 mb-xs">
+                <li class="card col-4 pr-sm">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Paris.jpg" alt="">
                         </div>
-                        <div class="card-txt-wrap d-flex jc-space-between pop-txt">
+                        <div class="card-txt-wrap d-flex jc-space-between ai-center pop-txt">
                             <p class="card-tit d-flex flex-d-col">
                                 <span class="fz-ets fw-bold color-basic-w-light">France</span>
                                 <span class="fz-sm color-basic-w fw-bold">Paris</span>
                             </p>
                             <div class="card-dec">
-                                <span class="material-icons">expand_more</span>
+                                <span class="material-icons color-basic-w">expand_more</span>
                             </div>
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 mb-xs">
+                <li class="card col-4 pr-sm">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Roma.jpg" alt="">
                         </div>
-                        <div class="card-txt-wrap d-flex jc-space-between pop-txt">
+                        <div class="card-txt-wrap d-flex jc-space-between ai-center pop-txt">
                             <p class="card-tit d-flex flex-d-col">
                                 <span class="fz-ets fw-bold color-basic-w-light">Italy</span>
                                 <span class="fz-sm color-basic-w fw-bold">Roma</span>
                             </p>
                             <div class="card-dec">
-                                <span class="material-icons">expand_more</span>
+                                <span class="material-icons color-basic-w">expand_more</span>
                             </div>
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 mb-xs">
+                <li class="card col-4">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Vancouver.jpg" alt="">
                         </div>
-                        <div class="card-txt-wrap d-flex jc-space-between pop-txt">
+                        <div class="card-txt-wrap d-flex jc-space-between ai-center pop-txt">
                             <p class="card-tit d-flex flex-d-col">
                                 <span class="fz-ets fw-bold color-basic-w-light">Canada</span>
                                 <span class="fz-sm color-basic-w fw-bold">Vancouver</span>
                             </p>
                             <div class="card-dec">
-                                <span class="material-icons">expand_more</span>
+                                <span class="material-icons color-basic-w">expand_more</span>
                             </div>
                         </div>
                     </a>
@@ -143,7 +152,86 @@
     </section>
 
     <!-- Get Inspiration -->
+    <section class="mb-lg">
+        <div class="container d-flex flex-d-col">
+            <div class="d-flex jc-space-between">
+                <h2 class="seb-tit mb-xs">Get Inspiration</h2>
+                <button class="button btn-secondary">SEE MORE</button>
+            </div>
+            <ul class="d-flex jc-space-between flex-wrap-w">
+                <li class="card col-4 pr-sm">
+                    <a href="">
+                        <div class="card-img-wrap ins-img mb-xs">
+                            <img src="./img/ins-Italy.jpg" alt="">
+                        </div>
+                        <div class="card-txt-wrap">
+                            <p class="card-tit mb-tiny fz-sm fw-bold color-basic-b ins-tit">Italy Fifth Most Visited Country In The World</p>
+                            <div class="card-dec ins-dec">
+                                <p>The rich history, traditions, culture and natural beauty of Italy – along with its incredible cuisine – have proved to be a magnet for visitors from across the globe.</p>
+                                <!-- <p>TWD 2,480</p> -->
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card col-4 pr-sm">
+                    <a href="">
+                        <div class="card-img-wrap ins-img mb-xs">
+                            <img src="./img/ins-Quebec.jpg" alt="">
+                        </div>
+                        <div class="card-txt-wrap">
+                            <p class="card-tit mb-tiny fz-sm fw-bold color-basic-b ins-tit">Getting Lost In Quebec</p>
+                            <div class="card-dec ins-dec">
+                                <p>Our next stop in Quebec involved us ‘getting lost’ in nature and the timing couldn’t have been more perfect for it.</p>
+                                <!-- <p>https://handluggageonly.co.uk/2020/03/04/getting-lost-in-nature-and-with-beavers-in-quebec-canada/</p> -->
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card col-4">
+                    <a href="">
+                        <div class="card-img-wrap ins-img mb-xs">
+                            <img src="./img/ins-Qatar.jpg" alt="">
+                        </div>
+                        <div class="card-txt-wrap">
+                            <p class="card-tit mb-tiny fz-sm fw-bold color-basic-b ins-tit">8 things to do in Doha, Qatar</p>
+                            <div class="card-dec ins-dec">
+                                <p>It is mostly considered a stopover city, especially with Qatar Airways offering so many connections worldwide.</p>
+                                <!-- <p>https://worldofwanderlust.com/8-things-to-do-in-doha-qatar/</p> -->
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
 
     <!-- Subscribe for Exclusive Offer -->
+    <section class="index-sub bgc-secondary">
+        <div class="container d-flex flex-d-col jc-center ai-center">
+            <div class="d-flex flex-d-col">
+                <p class="fz-lg fw-bold mb-xs color-basic-b">Subscribe for Exclusive Offer</p>
+                <div class="d-flex jc-space-between">
+                    <input type="text" name="" id="" placeholder="Your email address">
+                    <input type="submit" value="subscribe" class="button btn-primary">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <p>© 2020 ALOHA, Inc. All rights reserved</p>
+            <ul class="d-flex">
+                <li>FAQs</li>
+                <li>Terms of use</li>
+                <li>Privacy policy</li>
+            </ul>
+            <div class="d-flex">
+                <p>English</p>
+                <p>TWD</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
