--- a/index.html
+++ b/index.html
@@ -9,19 +9,48 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav>
-        <div class="container">
-            <h1></h1>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+    <nav class="navbar">
+        <div class="container d-flex jc-space-between ai-center">
+            <h1 class="logo">
+                <a href="" alt="ALOHA">ALOHA</a>
+            </h1>
+            <ul class="d-flex ai-center">
+                <li class="d-flex ai-center mr-m">
+                    <span class="material-icons">language</span>
+                    <span class="material-icons">arrow_drop_down</span>
+                </li>
+                <li class="mr-m">
+                    <a href="">Sign up</a>
+                </li>
+                <li>
+                    <a href="">Login</a>
+                </li>
             </ul>
         </div>
     </nav>
 
     <!-- header -->
-    <header></header>
+    <header class="header">
+        <div class="container d-flex jc-center ai-center">
+            <div class="d-flex bgc-secondary header-input-wrap">
+                <ul class="d-flex">
+                    <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
+                        <span class="material-icons color-basic-b">location_on</span>
+                        <input type="text" placeholder="Destination" class="input">
+                    </li>
+                    <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
+                        <span class="material-icons color-basic-b">date_range</span>
+                        <input type="text" placeholder="Check-in / Check-out" class="input">
+                    </li>
+                    <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
+                        <span class="material-icons color-basic-b">person</span>
+                        <input type="text" placeholder="Guests" class="input">
+                    </li>
+                </ul>
+                <button class="button btn-primary">SEARCH</button>
+            </div>
+        </div>
+    </header>
 
     <!-- Top Choices -->
     <section class="mb-lg">
@@ -211,7 +240,7 @@
             <div class="d-flex flex-d-col">
                 <p class="fz-lg fw-bold mb-xs color-basic-b">Subscribe for Exclusive Offer</p>
                 <div class="d-flex jc-space-between">
-                    <input type="text" name="" id="" placeholder="Your email address">
+                    <input type="text" name="" id="" placeholder="Your email address" class="input">
                     <input type="submit" value="subscribe" class="button btn-primary">
                 </div>
             </div>
@@ -219,18 +248,26 @@
     </section>
 
     <!-- footer -->
-    <footer>
-        <div class="container">
+    <footer class="footer">
+        <div class="container d-flex jc-space-between ai-center">
             <p>© 2020 ALOHA, Inc. All rights reserved</p>
             <ul class="d-flex">
-                <li>FAQs</li>
-                <li>Terms of use</li>
-                <li>Privacy policy</li>
+                <li class="mr-xs"><a href="">FAQs</a></li>
+                <li class="mr-xs"><a href="">Terms of use</a></li>
+                <li><a href="">Privacy policy</a></li>
             </ul>
-            <div class="d-flex">
-                <p>English</p>
-                <p>TWD</p>
-            </div>
+            <ul class="d-flex">
+                <li class="d-flex mr-xs">
+                    <span class="material-icons">language</span>
+                    <p>English</p>
+                    <span class="material-icons">arrow_drop_down</span>
+                </li class="d-flex">
+                <li class="d-flex">
+                    <span class="material-icons">attach_money</span>
+                    <p>TWD</p>
+                    <span class="material-icons">arrow_drop_down</span>
+                </li>
+            </ul>
         </div>
     </footer>
 </body>
