index top choice tab, slider tit, navbar fixed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 
     <!-- header -->
     <header class="header">
-        <div class="container d-flex jc-center ai-center">
+        <div class="container d-flex jc-center ai-center h-100p">
+            <div class="d-flex jc-space-between ai-center color-basic-w w-100p ">
+                <span class="material-icons fz-lg">navigate_before</span>
+                <h2 class="fz-lg fw-bold">Discover your ideal hotel</h2>
+                <span class="material-icons fz-lg">navigate_next</span>
+            </div>
             <div class="d-flex bgc-secondary header-input-wrap">
                 <ul class="d-flex">
                     <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
@@ -54,19 +59,109 @@
 
     <!-- Top Choices -->
     <section class="mb-lg">
-        <div class="container">
+        <div class="container d-flex flex-d-col">
             <h2 class="seb-tit mb-xs">Top Choices</h2>
+            <ul class="d-flex mb-xs">
+                <li class="pl-xs pr-m top-tab-active">
+                    <a href="" class="d-flex font-primary">
+                        <p class="fz-sm fw-bold mr-tiny">Bali</p>
+                        <span>128</span>
+                    </a>
+                </li>
+                <li class="pl-xs pr-m top-tab">
+                    <a href="" class="d-flex font-primary">
+                        <p class="fz-sm fw-bold mr-tiny">Okinawa</p>
+                        <span>67</span>
+                    </a>
+                </li>
+                <li class="pl-xs pr-m top-tab">
+                    <a href="" class="d-flex font-primary">
+                        <p class="fz-sm fw-bold mr-tiny">Taipei</p>
+                        <span>53</span>
+                    </a>
+                </li>
+            </ul>
             <ul class="d-flex flex-wrap-w">
-                <li class="card col-3 mr-sm">
+                <li class="card col-3 pr-sm">
                     <a href="#">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/Hotel Aqua.jpg" alt="Hotel Aqua">
                         </div>
                         <div class="card-txt-wrap">
-                            <p class="card-tit fw-bold">Hotel Aqua</p>
+                            <p class="card-tit fw-bold color-basic-b">Hotel Aqua</p>
                             <div class="card-dec">
-                                <p class="mb-tiny">★★★★★</p>
-                                <p>TWD 2,480</p>
+                                <div class="d-flex ai-center mb-tiny">
+                                    <span class="color-basic-b mr-tiny">★★★★★</span>
+                                    <span class="fz-xxs">5.0</span>
+                                    <span class="fz-ets">・2k reviews</span>
+                                </div>
+                                <div class="d-flex ai-center">
+                                    <p class="mr-tiny">TWD 2,480</p>
+                                    <del class="fz-ets">TWD 3,980</del>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card col-3 pr-sm">
+                    <a href="#">
+                        <div class="card-img-wrap mb-tiny">
+                            <img src="./img/Mr. Kawasaki Inn.jpg" alt="Hotel Aqua">
+                        </div>
+                        <div class="card-txt-wrap">
+                            <p class="card-tit fw-bold color-basic-b">Mr. Kawasaki Inn</p>
+                            <div class="card-dec">
+                                <div class="d-flex ai-center mb-tiny">
+                                    <span class="color-basic-b mr-tiny">★★★★</span>
+                                    <span class="fz-xxs">4.0</span>
+                                    <span class="fz-ets">・2k reviews</span>
+                                </div>
+                                <div class="d-flex ai-center">
+                                    <p class="mr-tiny">TWD 2,480</p>
+                                    <!-- <del class="fz-ets">TWD 3,980</del> -->
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card col-3 pr-sm">
+                    <a href="#">
+                        <div class="card-img-wrap mb-tiny">
+                            <img src="./img/Weekly Paradise.jpg" alt="Hotel Aqua">
+                        </div>
+                        <div class="card-txt-wrap">
+                            <p class="card-tit fw-bold color-basic-b">Weekly Paradise</p>
+                            <div class="card-dec">
+                                <div class="d-flex ai-center mb-tiny">
+                                    <span class="color-basic-b mr-tiny">★★★★</span>
+                                    <span class="fz-xxs">4.0</span>
+                                    <span class="fz-ets">・470 reviews</span>
+                                </div>
+                                <div class="d-flex ai-center">
+                                    <p class="mr-tiny">TWD 4,780</p>
+                                    <!-- <del class="fz-ets">TWD 3,980</del> -->
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card col-3 pr-sm">
+                    <a href="#">
+                        <div class="card-img-wrap mb-tiny">
+                            <img src="./img/Beast Hotel.jpg" alt="Hotel Aqua">
+                        </div>
+                        <div class="card-txt-wrap">
+                            <p class="card-tit fw-bold color-basic-b">Beast Hotel</p>
+                            <div class="card-dec">
+                                <div class="d-flex ai-center mb-tiny">
+                                    <span class="color-basic-b mr-tiny">★★★★</span>
+                                    <span class="fz-xxs">4.0</span>
+                                    <span class="fz-ets">・283 reviews</span>
+                                </div>
+                                <div class="d-flex ai-center">
+                                    <p class="mr-tiny">TWD 2,980</p>
+                                    <!-- <del class="fz-ets">TWD 3,980</del> -->
+                                </div>
                             </div>
                         </div>
                     </a>
