--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="./CSS/aloha.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./CSS/aloha.all.min.css">
+    <title>ALOHA｜Discover your ideal hotel</title>
 </head>
 <body>
     <!-- navbar -->
@@ -37,7 +37,7 @@
                 <h2 class="fz-lg fw-bold">Discover your ideal hotel</h2>
                 <span class="material-icons fz-lg">navigate_next</span>
             </div>
-            <div class="d-flex bgc-secondary header-input-wrap">
+            <div class="d-flex bgc-secondary index-search-bar">
                 <ul class="d-flex">
                     <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
                         <span class="material-icons color-basic-b">location_on</span>
@@ -81,8 +81,8 @@
                     </a>
                 </li>
             </ul>
-            <ul class="d-flex flex-wrap-w">
-                <li class="card col-3 pr-sm">
+            <ul class="row flex-wrap-w">
+                <li class="card col-3">
                     <a href="#">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/Hotel Aqua.jpg" alt="Hotel Aqua">
@@ -103,7 +103,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-3 pr-sm">
+                <li class="card col-3">
                     <a href="#">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/Mr. Kawasaki Inn.jpg" alt="Hotel Aqua">
@@ -124,7 +124,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-3 pr-sm">
+                <li class="card col-3">
                     <a href="#">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/Weekly Paradise.jpg" alt="Hotel Aqua">
@@ -145,7 +145,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-3 pr-sm">
+                <li class="card col-3">
                     <a href="#">
                         <div class="card-img-wrap mb-tiny">
                             <img src="./img/Beast Hotel.jpg" alt="Hotel Aqua">
@@ -174,8 +174,8 @@
     <section class="mb-lg">
         <div class="container">
             <h2 class="seb-tit mb-xs">Popular Destinations</h2>
-            <ul class="d-flex flex-wrap-w">
-                <li class="card col-4 pr-sm mb-xs">
+            <ul class="row flex-wrap-w">
+                <li class="card col-4 mb-xs">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Osaka.jpg" alt="">
@@ -191,7 +191,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 pr-sm mb-xs">
+                <li class="card col-4 mb-xs">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Kyoto.jpg" alt="">
@@ -223,7 +223,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 pr-sm">
+                <li class="card col-4">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Paris.jpg" alt="">
@@ -239,7 +239,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 pr-sm">
+                <li class="card col-4">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Roma.jpg" alt="">
@@ -282,8 +282,8 @@
                 <h2 class="seb-tit mb-xs">Get Inspiration</h2>
                 <button class="button btn-secondary">SEE MORE</button>
             </div>
-            <ul class="d-flex jc-space-between flex-wrap-w">
-                <li class="card col-4 pr-sm">
+            <ul class="row jc-space-between flex-wrap-w">
+                <li class="card col-4">
                     <a href="">
                         <div class="card-img-wrap ins-img mb-xs">
                             <img src="./img/ins-Italy.jpg" alt="">
@@ -297,7 +297,7 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-4 pr-sm">
+                <li class="card col-4">
                     <a href="">
                         <div class="card-img-wrap ins-img mb-xs">
                             <img src="./img/ins-Quebec.jpg" alt="">
