result-card-info, pagination-bar, sub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <input type="text" placeholder="Guests" class="input">
                     </li>
                 </ul>
-                <button class="button btn-primary">SEARCH</button>
+                <button class="button btn-primary btn-b">SEARCH</button>
             </div>
         </div>
     </header>
@@ -280,7 +280,7 @@
         <div class="container d-flex flex-d-col">
             <div class="d-flex jc-space-between">
                 <h2 class="seb-tit mb-xs">Get Inspiration</h2>
-                <button class="button btn-secondary">SEE MORE</button>
+                <button class="button btn-secondary btn-s">SEE MORE</button>
             </div>
             <ul class="row jc-space-between flex-wrap-w">
                 <li class="card col-4">
@@ -336,7 +336,7 @@
                 <p class="fz-lg fw-bold mb-xs color-basic-b">Subscribe for Exclusive Offer</p>
                 <div class="d-flex jc-space-between">
                     <input type="text" name="" id="" placeholder="Your email address" class="input">
-                    <input type="submit" value="subscribe" class="button btn-primary">
+                    <input type="submit" value="subscribe" class="button btn-primary btn-b">
                 </div>
             </div>
         </div>
