detail-room-type-list

--- a/detail.html
+++ b/detail.html
@@ -60,16 +60,96 @@
     <section class="mb-m">
         <div class="container">
             <h2 class="seb-tit mb-xs">Select Your Room</h2>
-            <ul class="d-flex">
-                <li class="">Reykjavík, Iceland</li>
-                <li>17 June - 19 June・2 nights</li>
-                <li>2 adults・1 room</li>
+            <ul class="d-flex ai-center">
+                <li class="select-tab mr-tiny">Reykjavík, Iceland</li>
+                <li class="select-tab mr-tiny">17 June - 19 June・2 nights</li>
+                <li class="select-tab mr-xs">2 adults・1 room</li>
+                <li class="color-primary fw-bold">EDIT DETAIL</li>
             </ul>
-            <div>EDIT DETAIL</div>
         </div>
     </section>
 
     <!-- room type -->
-    <section></section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <h5 class="fw-bold">ROOM TYPE</h5>
+                </div>
+                <div class="col-2">
+                    <h5 class="ta-center fw-bold">SLEEPS</h5>
+                </div>
+                <div class="col-2">
+                    <h5 class="ta-center fw-bold">PRICE</h5>
+                </div>
+                <div class="col-2">
+                    <h5 class="ta-center fw-bold">ROOMS</h5>
+                </div>
+            </div>
+            <div class="row pt-xs pb-xs">
+                <div class="col-6">
+                    <div class="type-list d-flex">
+                        <div class="type-list-img">
+                            <img src="./img/_hr_3.jpg" alt="">
+                        </div>
+                        <div class="type-list-info">
+                            <div class="mb-1">
+                                <p class="fw-bold">Deluxe Double Room A</p>
+                                <p class="fz-ets">1 bed (Queen size)</p>
+                            </div>
+                            <ul class="d-flex flex-wrap-w fz-xxs color-tertiary">
+                                <li class="d-flex ai-center w-50p mb-tiny">
+                                    <span class="material-icons">wifi</span>
+                                    <p>Wi-Fi</p>
+                                </li>
+                                <li class="d-flex ai-center w-50p mb-tiny">
+                                    <span class="material-icons">room_service</span>
+                                    <p>Room Service</p>
+                                </li>
+                                <li class="d-flex ai-center w-50p mb-tiny">
+                                    <span class="material-icons">restaurant</span>
+                                    <p>Breakfast</p>
+                                </li>
+                                <li class="d-flex ai-center w-50p mb-tiny">
+                                    <span class="material-icons">smoke_free</span>
+                                    <p>Smoke Free</p>
+                                </li>
+                                <li class="d-flex ai-center w-50p mb-tiny">
+                                    <span class="material-icons">local_bar</span>
+                                    <p>Mini Bar</p>
+                                </li>
+                                <li class="d-flex ai-center w-50p mb-tiny">
+                                    <span class="material-icons">tv</span>
+                                    <p>Television</p>
+                                </li>
+                                <li class="d-flex ai-center w-50p">
+                                    <span class="material-icons">ac_unit</span>
+                                    <p>Air Conditioner</p>
+                                </li>
+                                <li class="d-flex ai-center w-50p">
+                                    <span class="material-icons">kitchen</span>
+                                    <p>Refrigerator</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2 d-flex jc-center ai-center color-basic-b">
+                    <span class="material-icons">person</span>
+                    <span class="material-icons">person</span>
+                </div>
+                <div class="col-2 d-flex jc-center ai-center flex-d-col">
+                    <p>TWD 1,600</p>
+                    <p class="fz-ets">per night</p>
+                </div>
+                <div class="col-2 d-flex jc-center ai-center color-basic-b">
+                    <span class="material-icons">add</span>
+                    <p class="mr-xs ml-xs">1</p>
+                    <span class="material-icons">remove</span>
+                </div>
+            </div>
+            
+        </div>
+    </section>
 </body>
 </html>
