--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
                 <a href="" alt="ALOHA">ALOHA</a>
             </h1>
             <ul class="d-flex ai-center">
-                <li class="d-flex ai-center mr-m">
-                    <span class="material-icons">language</span>
-                    <span class="material-icons">arrow_drop_down</span>
+                <li>
+                    <div class="lan-list d-flex ai-center mr-m">
+                        <span class="material-icons">language</span>
+                        <span class="material-icons">arrow_drop_down</span>
+                    </div>
+                    <ul class="drop-list">
+                        <li><a href="">繁體中文</a></li>
+                        <li><a href="">English</a></li>
+                        <li><a href="">Français</a></li>
+                        <li><a href="">Español</a></li>
+                    </ul>
                 </li>
                 <li class="mr-m">
                     <a href="">Sign up</a>
@@ -40,15 +48,15 @@
             <div class="d-flex bgc-secondary index-search-bar">
                 <ul class="d-flex">
                     <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
-                        <span class="material-icons color-basic-b">location_on</span>
+                        <span class="material-icons color-basic-b pl-1 pr-1">location_on</span>
                         <input type="text" placeholder="Destination" class="input">
                     </li>
                     <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
-                        <span class="material-icons color-basic-b">date_range</span>
+                        <span class="material-icons color-basic-b pl-1 pr-1">date_range</span>
                         <input type="text" placeholder="Check-in / Check-out" class="input">
                     </li>
                     <li class="d-flex jc-center ai-center mr-1 bgc-basic-w">
-                        <span class="material-icons color-basic-b">person</span>
+                        <span class="material-icons color-basic-b pl-1 pr-1">person</span>
                         <input type="text" placeholder="Guests" class="input">
                     </li>
                 </ul>
@@ -62,19 +70,19 @@
         <div class="container d-flex flex-d-col">
             <h2 class="seb-tit mb-xs">Top Choices</h2>
             <ul class="d-flex mb-xs">
-                <li class="pl-xs pr-m top-tab-active">
+                <li class="pl-xs pr-xs top-tab-active">
                     <a href="" class="d-flex font-primary">
                         <p class="fz-sm fw-bold mr-tiny">Bali</p>
                         <span>128</span>
                     </a>
                 </li>
-                <li class="pl-xs pr-m top-tab">
+                <li class="pl-xs pr-xs top-tab">
                     <a href="" class="d-flex font-primary">
                         <p class="fz-sm fw-bold mr-tiny">Okinawa</p>
                         <span>67</span>
                     </a>
                 </li>
-                <li class="pl-xs pr-m top-tab">
+                <li class="pl-xs pr-xs top-tab">
                     <a href="" class="d-flex font-primary">
                         <p class="fz-sm fw-bold mr-tiny">Taipei</p>
                         <span>53</span>
@@ -175,7 +183,7 @@
         <div class="container">
             <h2 class="seb-tit mb-xs">Popular Destinations</h2>
             <ul class="row flex-wrap-w">
-                <li class="card col-4 mb-xs">
+                <li class="card col-4 mb-xs pop-card">
                     <a href="#">
                         <div class="card-img-wrap pop-img">
                             <img src="./img/pop-Osaka.jpg" alt="">
@@ -366,4 +374,10 @@
         </div>
     </footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script>
+    $(".lan-list").click(function(){
+        $(".drop-list").toggle();
+    })
+</script>
 </html>
