--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!--  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <!--  -->
     <link rel="stylesheet" href="./CSS/aloha.all.min.css">
     <title>ALOHA｜Discover your ideal hotel</title>
 </head>
@@ -72,7 +75,7 @@
             <ul class="d-flex mb-xs">
                 <li class="pl-xs pr-xs top-tab-active">
                     <a href="" class="d-flex font-primary">
-                        <p class="fz-sm fw-bold mr-tiny">Bali</p>
+                        <p class="fz-sm fw-bold mr-tiny">Bodø</p>
                         <span>128</span>
                     </a>
                 </li>
@@ -89,32 +92,11 @@
                     </a>
                 </li>
             </ul>
-            <ul class="row flex-wrap-w">
-                <li class="card col-3">
+            <ul class="owl-carousel">
+                <li class="card choices-card">
                     <a href="#">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/Hotel Aqua.jpg" alt="Hotel Aqua">
-                        </div>
-                        <div class="card-txt-wrap">
-                            <p class="card-tit fw-bold color-basic-b">Hotel Aqua</p>
-                            <div class="card-dec">
-                                <div class="d-flex ai-center mb-tiny">
-                                    <span class="color-basic-b mr-tiny">★★★★★</span>
-                                    <span class="fz-xxs">5.0</span>
-                                    <span class="fz-ets">・2k reviews</span>
-                                </div>
-                                <div class="d-flex ai-center">
-                                    <p class="mr-tiny">TWD 2,480</p>
-                                    <del class="fz-ets">TWD 3,980</del>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li class="card col-3">
-                    <a href="#">
-                        <div class="card-img-wrap mb-tiny">
-                            <img src="./img/Mr. Kawasaki Inn.jpg" alt="Hotel Aqua">
+                            <img src="./img/_cc_1.jpg" alt="Mr. Kawasaki Inn">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Mr. Kawasaki Inn</p>
@@ -132,10 +114,10 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-3">
+                <li class="card choices-card">
                     <a href="#">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/Weekly Paradise.jpg" alt="Hotel Aqua">
+                            <img src="./img/_cc_2.jpg" alt="Weekly Paradise">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Weekly Paradise</p>
@@ -153,10 +135,10 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-3">
+                <li class="card choices-card">
                     <a href="#">
                         <div class="card-img-wrap mb-tiny">
-                            <img src="./img/Beast Hotel.jpg" alt="Hotel Aqua">
+                            <img src="./img/_cc_3.jpg" alt="Beast Hotel">
                         </div>
                         <div class="card-txt-wrap">
                             <p class="card-tit fw-bold color-basic-b">Beast Hotel</p>
@@ -169,6 +151,48 @@
                                 <div class="d-flex ai-center">
                                     <p class="mr-tiny">TWD 2,980</p>
                                     <!-- <del class="fz-ets">TWD 3,980</del> -->
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card choices-card">
+                    <a href="#">
+                        <div class="card-img-wrap mb-tiny">
+                            <img src="./img/_cc_4.jpg" alt="Luxury jumeira">
+                        </div>
+                        <div class="card-txt-wrap">
+                            <p class="card-tit fw-bold color-basic-b">Luxury jumeira</p>
+                            <div class="card-dec">
+                                <div class="d-flex ai-center mb-tiny">
+                                    <span class="color-basic-b mr-tiny">★★★★★</span>
+                                    <span class="fz-xxs">5.0</span>
+                                    <span class="fz-ets">・5k reviews</span>
+                                </div>
+                                <div class="d-flex ai-center">
+                                    <p class="mr-tiny">TWD 6,880</p>
+                                    <!-- <del class="fz-ets">TWD 3,980</del> -->
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li class="card choices-card">
+                    <a href="#">
+                        <div class="card-img-wrap mb-tiny">
+                            <img src="./img/_cc_5.jpg" alt="Hotel Aqua">
+                        </div>
+                        <div class="card-txt-wrap">
+                            <p class="card-tit fw-bold color-basic-b">Hotel Aqua</p>
+                            <div class="card-dec">
+                                <div class="d-flex ai-center mb-tiny">
+                                    <span class="color-basic-b mr-tiny">★★★★★</span>
+                                    <span class="fz-xxs">5.0</span>
+                                    <span class="fz-ets">・2k reviews</span>
+                                </div>
+                                <div class="d-flex ai-center">
+                                    <p class="mr-tiny">TWD 2,480</p>
+                                    <del class="fz-ets">TWD 3,980</del>
                                 </div>
                             </div>
                         </div>
@@ -361,12 +385,12 @@
             </ul>
             <ul class="d-flex">
                 <li class="d-flex mr-xs">
-                    <span class="material-icons">language</span>
+                    <span class="material-icons mr-tiny">language</span>
                     <p>English</p>
                     <span class="material-icons">arrow_drop_down</span>
-                </li class="d-flex">
+                </li>
                 <li class="d-flex">
-                    <span class="material-icons">attach_money</span>
+                    <span class="material-icons mr-tiny">attach_money</span>
                     <p>TWD</p>
                     <span class="material-icons">arrow_drop_down</span>
                 </li>
@@ -375,9 +399,19 @@
     </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script>
+
     $(".lan-list").click(function(){
         $(".drop-list").toggle();
     })
+
+    $(document).ready(function(){
+        $(".owl-carousel").owlCarousel({
+            loop: true,
+            items: 4,
+            margin: 30,
+        });
+    });
 </script>
 </html>
